# acghacknews

./: DEPLOY.md  skill.md
backend/: .env  .env.example  .gitignore  debug_sources.py  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  orchestrator.py  repository.py  scoring.py  translation.py
backend/app/fetchers/: anilist.py  base.py  reddit.py  rss.py  steam.py
backend/app/middleware/: body_limit.py  rate_limit.py  security_headers.py
backend/app/routers/: admin.py  feed.py  health.py
backend/tests/: conftest.py  test_api_endpoints.py  test_database.py  test_health.py  test_heat_score.py  test_orchestrator.py  test_source_fetchers.py  test_translation.py
docs/: API.md
docs/plans/2026-04-09-acg-feed-design/: _index.md  architecture.md  bdd-specs.md  best-practices.md
docs/plans/2026-04-09-acg-feed-plan/: _index.md  task-001-backend-project-setup.md  task-002-database-impl.md  task-003-heat-score-impl.md  task-003-heat-score-test.md  task-004-source-fetchers-impl.md  task-004-source-fetchers-test.md  task-005-translation-service-impl.md  task-005-translation-service-test.md  task-006-orchestrator-impl.md  task-006-orchestrator-test.md  (+5 more)
frontend/: package-lock.json  package.json  vitest.setup.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend/__tests__/: FeedCard.test.tsx  FeedList.test.tsx  TabBar.test.tsx  TopBar.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts  constants.ts  types.ts
(+38 files in other folders)
