[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acgfeed-backend"
version = "0.1.0"
description = "ACG Feed API backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "apscheduler",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "feedparser",
    "aiosqlite",
    "openai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
